--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "1037",
   "version": "0.1.0",
-  "homepage": "www.scottmacleodcodes.com",
+  "homepage": "https://www.scottmacleodcodes.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
