--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "1037",
   "version": "0.1.0",
-  "homepage": "https://www.scottmacleodcodes.com/",
+  "homepage": "https://scottmacleod1990.github.io/feb1-test/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
